# julep

./: README-CN.md  README-FR.md  README-JA.md
agents-api/: pyproject.toml
agents-api/agents_api/: web.py
agents-api/agents_api/activities/: embed_docs.py  excecute_api_call.py  execute_system.py  types.py  utils.py
agents-api/agents_api/activities/task_steps/: base_evaluate.py  evaluate_step.py  get_value_step.py  prompt_step.py  set_value_step.py  tool_call_step.py  transition_step.py  yield_step.py
agents-api/agents_api/autogen/: Docs.py  Tasks.py
agents-api/agents_api/clients/: cozo.py  litellm.py
agents-api/agents_api/clients/worker/: worker.py
agents-api/agents_api/common/utils/: cozo.py
agents-api/agents_api/dependencies/: developer_id.py
agents-api/agents_api/metrics/: counters.py
agents-api/agents_api/models/: utils.py
agents-api/agents_api/models/agent/: create_agent.py  create_or_update_agent.py  delete_agent.py  get_agent.py  list_agents.py  patch_agent.py  update_agent.py
agents-api/agents_api/models/chat/: gather_messages.py  prepare_chat_context.py
agents-api/agents_api/models/developer/: get_developer.py
agents-api/agents_api/models/docs/: create_doc.py  delete_doc.py  embed_snippets.py  get_doc.py  list_docs.py  search_docs_by_embedding.py  search_docs_by_text.py  search_docs_hybrid.py
agents-api/agents_api/models/entry/: create_entries.py  delete_entries.py  get_history.py  list_entries.py
agents-api/agents_api/models/execution/: create_execution.py  create_execution_transition.py  create_temporal_lookup.py  get_execution.py  get_execution_transition.py  get_paused_execution_token.py  get_temporal_workflow_data.py  list_execution_transitions.py  list_executions.py  lookup_temporal_data.py  prepare_execution_input.py  update_execution.py
agents-api/agents_api/models/session/: create_or_update_session.py  create_session.py  delete_session.py  get_session.py  list_sessions.py  patch_session.py  prepare_session_data.py  update_session.py
agents-api/agents_api/models/task/: create_or_update_task.py  create_task.py  delete_task.py  get_task.py  list_tasks.py  patch_task.py  update_task.py
agents-api/agents_api/models/tools/: create_tools.py  delete_tool.py  get_tool.py  get_tool_args_from_metadata.py  list_tools.py  patch_tool.py  update_tool.py
agents-api/agents_api/models/user/: create_or_update_user.py  create_user.py  delete_user.py  get_user.py  list_users.py  patch_user.py  update_user.py
agents-api/agents_api/routers/agents/: create_agent.py  create_or_update_agent.py  delete_agent.py  get_agent_details.py  list_agents.py  patch_agent.py  update_agent.py
agents-api/agents_api/routers/docs/: create_doc.py  delete_doc.py  get_doc.py  list_docs.py  search_docs.py
agents-api/agents_api/routers/sessions/: chat.py  get_session_history.py
agents-api/agents_api/routers/tasks/: create_task_execution.py  get_task_details.py
agents-api/agents_api/workflows/task_execution/: __init__.py  helpers.py
agents-api/tests/: fixtures.py  test_agent_queries.py  test_chat_routes.py  test_developer_queries.py  test_docs_queries.py  test_entry_queries.py  test_execution_queries.py
typespec/docs/: models.tsp
(+2 files in other folders)
